# SOFAR_PROJECT

./: .gitignore  README.md  SOFAR Presentation_HEAL_KOJIMA_HARTMANN.pptx  frames_2025-04-30_17.26.58.gv  frames_2025-04-30_17.27.13.gv  frames_2025-04-30_18.05.26.gv  frames_2025-05-05_17.19.17.gv  frames_2025-05-07_11.13.14.gv  frames_2025-05-12_14.21.32.gv  frames_2025-05-12_14.40.25.gv  frames_2025-05-12_14.48.52.gv  frames_2025-05-12_17.02.47.gv  frames_2025-05-12_17.03.39.gv  frames_2025-05-12_17.08.21.gv  frames_2025-05-12_17.17.11.gv  frames_2025-05-12_17.21.04.gv  frames_2025-05-12_17.27.47.gv  map.pgm  map.yaml
catmux_config/: catmux_sofar.yaml
moving/: metadata.yaml
rosbag2_2025_05_06-12_02_31/rosbag2_2025_05_06-12_02_31/: metadata.yaml  rosbag2_2025_05_06-12_02_31_0.db3:Zone.Identifier
rosbags/no_movement/: metadata.yaml  no_movement_2_0.db3
src/detect_obstacles/: CMakeLists.txt  package.xml
src/detect_obstacles/config/: costmap_common_params.yaml  kame.rviz
src/detect_obstacles/launch/: launch.py  launch_sim.launch.py  launch_sim.py  launch_sim_pf.launch.py
src/detect_obstacles/src/: create_map.cpp  find_obstacles copy.cpp  find_obstacles.cpp  get_obstacle_pose.cpp  potential_field.cpp
src/my_nav2_package/: package.xml  setup.py
src/my_pkg/: CMakeLists.txt  package.xml
src/my_pkg/config/: nav2_params.yaml
src/my_pkg/launch/: launch.py
src/my_pkg/maps/: beacon_map.yaml
src/my_pkg/src/: driving_node.cpp
src/navv/: CMakeLists.txt  package.xml
src/navv/config/: config.rviz  driving_node.yaml
src/navv/launch/: launch.py
src/navv/src/: driving_node.cpp  new_scan.cpp
src/nnavigation/: CMakeLists.txt  beacon_map.yaml  package.xml
src/nnavigation/config/: config.rviz  nav2_params.yaml  nav2_params2.yaml  nav2_params2_2.yaml  nav2_params2_2_sim.yaml  nav2_params2_sim.yaml  nav2_params_test.yaml  nnavigation.rviz  planner.yaml  planning.rviz  slam.rviz  slam2.rviz  test.rviz
src/nnavigation/launch/: launch.py  launch_copy.py  map.launch.py  slam.launch.py
src/nnavigation/maps/: map.yaml
src/turt_localization/: CMakeLists.txt  package.xml
src/turt_localization/src/: turt_localize.cpp
