<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<!--  TODO your package name -->
  <name>navv</name>
  <version>0.1.0</version>
  <description>This package does great things</description>
  <maintainer email="e@mail.fr">Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
<!--  list the required ROS 2 dependencies  -->
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <!-- <depend>tf_ros</depend> -->
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_geometry</depend>
  <depend>tf2_msgs</depend>
  <depend>rclcpp_components</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
