<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turt_localization</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sjose@todo.todo">sjose</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

<!--  list the required ros2 dependencies-->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
